llvm-spirv/test/negative/invalid-wordcount/invalid-wordcount-groupdecorate.spt
; OpGroupDecorate minimum = 2 (header + decoration-group); WordCount=1 is
; malformed.
; Test that malformed input is rejected early rather than silently causing
; integer underflow and potential process hang.

; RUN: not llvm-spirv %s -to-binary -o %t.spv 2>&1 | FileCheck %s
; CHECK: InvalidWordCount:

119734787 65536 0 6 0
2 Capability Kernel
3 MemoryModel 1 2
2 DecorationGroup 3
1 GroupDecorate 3
